--- a/docs/mkdocs/css/extra.css
+++ b/docs/mkdocs/css/extra.css
@@ -21,3 +21,9 @@
 [data-md-color-scheme=slate][data-md-color-primary=black] {
   --md-typeset-a-color: #7862FF;
 }
+
+/* use a daft color for note admonitions */
+.md-typeset .admonition.note,
+.md-typeset details.note {
+  border-color: #7862FF;
+}
