--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -97,7 +97,7 @@ code.doc-symbol-method::after {
   display: none;
 }
 
-/* table display width */
+/* body display width */
 .md-grid {
   max-width: 70rem;
 }
@@ -105,4 +105,36 @@ code.doc-symbol-method::after {
 /* spacing between slack & github icon in header*/
 [dir=ltr] .md-header__source {
   margin-left: 0.3rem;
+}
+
+/* spacing between header and body */
+.md-main__inner {
+  margin-top: 0.5rem;
+}
+
+/* sidebar spacing */
+.md-sidebar {
+  width: 10rem;
+}
+
+[dir=ltr] .md-nav--primary .md-nav__item>.md-nav__link {
+  margin-right: 0rem;
+}
+
+/* font size in secondary nav */
+.md-nav--secondary,
+.md-nav--secondary nav.md-nav {
+  font-size: 0.6rem;
+  color: var(--md-default-fg-color--light);
+}
+
+/* spacing between items in secondary nav */
+.md-nav--secondary,
+.md-nav--secondary a.md-nav__link {
+  margin-top: .45em;
+}
+
+/* spacing for secondary nav ToC */
+.md-nav--secondary .md-nav__title {
+  box-shadow: 0 0 .2rem .2rem var(--md-default-bg-color);
 }
