--- a/docs/overrides/partials/base.html
+++ b/docs/overrides/partials/base.html
@@ -473,8 +473,8 @@
             apiKey: 'eb05e80b7739efec7038d98158f39a54',
             appId: 'CTX8NKR4GC',
             indexName: 'getdaft',
-            inputSelector: '.md-search__input',
-            container: '#docsearch',
+            container: '#.md-search__input',
+            // container: '#docsearch',
             algoliaOptions: {
               'facetFilters': facetFilters
             },
