--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -170,3 +170,26 @@ code.doc-symbol-method::after {
 .md-footer-meta__inner.md-grid {
   max-width: 50rem;
 }
+
+/** Algolia search module */
+.md-search__input::-webkit-search-decoration,
+.md-search__input::-webkit-search-cancel-button,
+.md-search__input::-webkit-search-results-button,
+.md-search__input::-webkit-search-results-decoration {
+  -webkit-appearance:none;
+}
+
+.md-search-result__article {
+  padding-bottom: .55em;
+}
+
+.ais-SearchBox-form {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.md-search-result mark.ais-Highlight-highlighted,
+.md-search-result mark.ais-Snippet-highlighted {
+  color: var(--md-primary-fg-color);
+}
