--- a/docs/css/docsearch.css
+++ b/docs/css/docsearch.css
@@ -17,7 +17,7 @@
 }
 
 .DocSearch-Button .DocSearch-Search-Icon{
-    color: #532687 !important;
+    color: var(--md-primary-fg-color) !important;
 }
 
 .DocSearch-Button-Placeholder{
@@ -26,7 +26,7 @@
 }
 
 .DocSearch-Button:active,.DocSearch-Button:focus,.DocSearch-Button:hover{
-    color: #532687 !important;
+    color: var(--md-primary-fg-color) !important;
 }
 
 .DocSearch-Button-Key{
@@ -36,6 +36,7 @@
     padding:2px 0 !important;
     top:0px !important;
     font-weight: 600 !important;
+    height: 20px !important;
 }
 
 .DocSearch-Commands-Key{
