--- a/docs/overrides/partials/search.html
+++ b/docs/overrides/partials/search.html
@@ -21,9 +21,9 @@
 -->
 
 <!-- Search interface -->
-<div class="md-search" data-md-component="search" role="dialog">
+<div class="md-search" data-md-component="search" role="dialog" id="docsearch">
     <label class="md-search__overlay" for="__search"></label>
-    <div class="md-search__inner" role="search" id="docsearch">
+    <div class="md-search__inner" role="search">
       <form class="md-search__form" name="search">
 
         <!-- Search input -->
@@ -31,8 +31,8 @@
           type="text"
           class="md-search__input"
           name="query"
-          aria-label="{{ lang.t('search.placeholder') }}"
-          placeholder="{{ lang.t('search.placeholder') }}"
+          aria-label="Search"
+          placeholder="Search"
           autocapitalize="off"
           autocorrect="off"
           autocomplete="off"
@@ -42,22 +42,19 @@
         />
 
         <!-- Button to open search -->
+
         <label class="md-search__icon md-icon" for="__search">
-
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9.5 3A6.5 6.5 0 0 1 16 9.5c0 1.61-.59 3.09-1.56 4.23l.27.27h.79l5 5-1.5 1.5-5-5v-.79l-.27-.27A6.516 6.516 0 0 1 9.5 16 6.5 6.5 0 0 1 3 9.5 6.5 6.5 0 0 1 9.5 3m0 2C7 5 5 7 5 9.5S7 14 9.5 14 14 12 14 9.5 12 5 9.5 5Z"></path></svg>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 11v2H8l5.5 5.5-1.42 1.42L4.16 12l7.92-7.92L13.5 5.5 8 11h12Z"></path></svg>
-
-        </label>
+            {% set icon = config.theme.icon.search or "material/magnify" %}
+            {% include ".icons/" ~ icon ~ ".svg" %}
+            {% set icon = config.theme.icon.previous or "material/arrow-left" %}
+            {% include ".icons/" ~ icon ~ ".svg" %}
+          </label>
 
         <!-- Search options -->
         <nav
           class="md-search__options"
           aria-label="Search"
         >
-          <button id="searchbox-clear" type="reset" class="md-search__icon md-icon" title="Clear" aria-label="Clear" tabindex="-1">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"></path></svg>
-          </button>
-
         </nav>
 
         <!-- Search suggestions -->
