--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -170,8 +170,7 @@ code.doc-symbol-method::after {
   max-width: 50rem;
 }
 
-/* Ask AI Widget */
-p.mantine-focus-auto.m_b6d8b162.mantine-Text-root, [class*="mantine-Text-root"] {
-  /* Change the font family to your preferred font */
-  font-family: 'Oxygen', sans-serif !important;
+/* Readthedocs flyout */
+.container.bottom-left {
+  bottom: 70px;
 }
