trying to reposition readthedocs flyout 2

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -171,6 +171,6 @@ code.doc-symbol-method::after {
 }
 
 /* Readthedocs flyout */
-.readthedocs-flyout .floating.container.bottom-left {
+:host([position="bottom-left"]) {
   bottom: 70px !important;
 }
