trying readthedocs position 2

--- a/docs/css/flyout.css
+++ b/docs/css/flyout.css
@@ -2,3 +2,8 @@
     left: 20px;
     bottom: 100px !important;
   }
+
+:host[position="inline"] {
+    left: 20px;
+    bottom: 100px !important;
+}
