trying readthedocs position 3

--- a/docs/css/flyout.css
+++ b/docs/css/flyout.css
@@ -3,7 +3,7 @@
     bottom: 100px !important;
   }
 
-:host[position="inline"] {
+:host[position="bottom-left"] {
     left: 20px;
     bottom: 100px !important;
 }
