docs: add readthedocs version selector for future versions (#4383)
## Changes Made

Currently, AskAI widget hovers over readthedocs flyout when open, cannot
adjust position of readthedocs flyout

![image](https://github.com/user-attachments/assets/5ee4d68f-ff88-4fab-8cba-790dcbe95cf3)

Added readthedocs version selector for future versions, hide flyout for
future but exists for past versions.

![image](https://github.com/user-attachments/assets/b077805a-d865-4627-a669-c1620beaf72d)

See build: https://www.getdaft.io/projects/docs/en/chanchan-readthedocs/

## Related Issues

n/a

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -18,6 +18,11 @@
   --md-accent-fg-color: #ad9fff;
 }
 
+/* hide readthedocs flyout for future versions (>0.4.15) */
+readthedocs-flyout {
+  display: none !important;
+}
+
 [data-md-color-scheme=slate][data-md-color-primary=black], [data-md-color-scheme=default] {
   --md-typeset-a-color: #7862FF;
 }
@@ -168,4 +173,13 @@ code.doc-symbol-method::after {
 
 .md-footer-meta__inner.md-grid {
   max-width: 50rem;
+}
+
+/* readthedocs version selector */
+.md-version__list {
+  display: none;
+}
+
+.md-version__list--active {
+  display: block;
 }
