--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -186,6 +186,6 @@ code.doc-symbol-method::after {
   grid-template-columns: repeat(3, 1fr);
 }
 
-.md-typeset .grid.cards.api>ol>li, .md-typeset .grid.cards.api>ul>li, .md-typeset .api>.grid>.card {
-  padding: .5rem .6rem !important;
+.md-typeset .grid.cards>ol>li, .md-typeset .grid.cards>ul>li, .md-typeset .grid>.card {
+  padding: 0.6rem;
 }
