--- a/docs/gen_pages/templates/functions.md.j2
+++ b/docs/gen_pages/templates/functions.md.j2
@@ -2,7 +2,7 @@
 title: Functions
 ---
 
-# Functions
+# daft.functions
 Built-in Daft Functions
 
 {% for category, title in category_titles.items() %}
